2006-10-27  Bruno Haible  <bruno@clisp.org>

	Work around automake-1.10 annoyance.
	* Makefile.am (ACLOCAL): New macro.

2006-11-27  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16.1 released.

2006-10-26  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16 released.

2006-10-25  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Don't invoke AC_RELOCATABLE; now done through the
	relocwrapper and gettext-tools-libgettextpo-misc modules.

2006-10-25  Bruno Haible  <bruno@clisp.org>

	* configure.ac (DLL_VARIABLE): Define to empty if IN_RELOCWRAPPER is
	defined.

2006-10-20  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (ACLOCAL_AMFLAGS): Add -I libgettextpo/gnulib-m4.
	* configure.ac: Also invoke gtpo_EARLY, gtpo_INIT.

2006-10-18  Bruno Haible  <bruno@clisp.org>

	* woe32dll/gettextsrc-exports.c: Add {input,output}_format_*.

2006-10-16  Bruno Haible  <bruno@clisp.org>

	* libgettextpo: New directory.
	* Makefile.am (SUBDIRS): Add libgettextpo.
	* configure.ac (gt_GLOBAL_SYMBOL_PIPE): New macro.
	(AC_CONFIG_FILES): Add libgettextpo/Makefile, libgettextpo/exported.sh.

2006-10-15  Bruno Haible  <bruno@clisp.org>

	* woe32dll/gettextsrc-exports.c: Remove input_syntax.

2006-10-02  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add gnulib-m4/gnulib-cache.m4.

2006-10-02  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (ACLOCAL_AMFLAGS): Move gnulib-m4 to the end, since
	sometime we have newer m4 files than gnulib.

2006-08-28  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Remove bh_C_SIGNED invocation.

2006-07-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (ACLOCAL_AMFLAGS): Append gnulib-m4 to search path.
	(SUBDIRS): Replace lib with gnulib-lib.
	(examplesbuildauxdir, examplesbuildaux_DATA): New variables.
	* configure.ac (AC_PREREQ): Bump to 2.59.
	(gl_EARLY): Invoke.
	(AC_GNU_SOURCE, gl_USE_SYSTEM_EXTENSIONS): Remove invocations.
	(gl_INIT): Invoke.
	(limits.h, malloc.h, string.h, unistd.h, utime.h, values.h,