@@ -289,10 +289,11 @@ dnl Check for tools needed for formatting man pages.
 CROSS_COMPILING=$cross_compiling
 AC_SUBST(CROSS_COMPILING)
 
-dnl Checks for optional programs for the tests/lang-* tests.
+dnl Checks for optional programs for the tests/lang-*, tests/recode-* tests.
 gt_PROG_ANSI_CXX
 gt_LOCALE_FR
 gt_LOCALE_FR_UTF8
+gt_LOCALE_JA
 
 dnl Check whether to execute tests that rely on libasprintf.
 dnl This test must be consistent with gettext-runtime/configure.ac.
