@@ -1,3 +1,8 @@
+2006-12-10  Bruno Haible  <bruno@clisp.org>
+
+	* locale-ja.m4: New file.
+	* Makefile.am (EXTRA_DIST): Add it.
+
 2006-11-27  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.16.1 released.
