@@ -1,3 +1,7 @@
+2006-12-10  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: Invoke gt_LOCALE_JA.
+
 2006-10-27  Bruno Haible  <bruno@clisp.org>
 
 	Work around automake-1.10 annoyance.
